--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
 	<title>ECC006</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<title>Trillium Media Design</title>
+<meta charset="utf-8">
+<style>
+	body {
+		background-color: #0066CC;
+		color: navy;
+	}
+
+	header{
+		font-family: Arial, Helvetica, sans-serif;
+	}
+</style>
+
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
- 
- 	<h2>Othman Othman</h2>
- 	<h3>20168505</h3>
- 	<h4>Software Engineer</h4>
-  
+	<header><h1>Trillium Media Design</h1></header>
+	<p>Our professional staff takes pride in its working relationship with our clients by offering personalized services that listen to their needs, develio their target areas, and incroporate these items into a wesite that works.</p>
+
 </body>
 </html>
